# defendio

./: .editorconfig  .gitignore  Cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/assets/maps/: test.tmx
app/assets/shaders/: light.wgsl  tiled_surface_material.wgsl  tilemap.wgsl  world.wgsl
app/assets/tilesets/: forest-tileset.tsx  tiles.tsx
app/config/: default.yaml
app/examples/: actors.rs  tiles.rs
app/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  plugin.rs
app/src/asset/: load.rs  mod.rs
app/src/camera/: mod.rs
app/src/input_manager/: action.rs  action_state.rs  mod.rs  mouse.rs
app/src/interaction/: input_action.rs  mod.rs
app/src/lighting/: camera.rs  light_material.rs  light_mesh.rs  mod.rs  pipeline.rs  uniform.rs
app/src/state/: load_state.rs  mod.rs
app/src/surface/: mod.rs
app/src/tilemap/: bundle.rs  data.rs  material.rs  mod.rs  plugin.rs
app/src/tilemap/generator/: random.rs
app/src/world_material/: bind_groups.rs  extract.rs  material.rs  mod.rs  pipeline.rs  plugin.rs  render_command.rs
app/src/world_material/assets/: world_material_bindings.wgsl  world_material_types.wgsl
