[package]
name = "defendio_app"
version = "0.0.0"
edition = "2021"

[lib]
name = "defendio_app"
path = "src/lib.rs"

[[bin]]
name = "defendio_app"
path = "src/main.rs"

[features]
default = ["bevy/dynamic_linking"]

[dependencies]
thiserror = "1.0.40"
config = "0.13.3"
itertools = "0.10.5"
chrono = "0.4.24"
serde = { version = "1.0.159", features = ["derive"] }
once_cell = "1.17.1"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
leafwing-input-manager = "0.9.1"
bevy_rapier2d = { version = "0.21.0", features = ["parallel", "simd-stable", "wasm-bindgen"] }
bracket-noise = "0.8.7"
rand = "0.8.5"
